@@ -79,6 +79,11 @@ class ApiDelete extends ApiBase {
 				$this->dieUsageMsg(current($retval));
 		} else {
 			$articleObj = new Article($titleObj);
+				$bigHistory = $articleObj->isBigDeletion();
+				if( $bigHistory && !$wgUser->isAllowed( 'bigdelete' ) ) {
+					global $wgDeleteRevisionsLimit;
+					$this->dieUsageMsg(array('delete-toobig', $wgDeleteRevisionsLimit));
+				}
 			$retval = self::delete($articleObj, $params['token'], $reason);
 			
 			if(count($retval))
